<resources>
    <string name="app_name">Karka</string>
    <string name="title_activity_app_menu">AppMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="class_menu">Class</string>
    <string name="code_item">Code</string>
    <string name="profile_menu">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="py_preview">Get into the world of programming!! This program will guide you through the basics as you experiment with unique example programs that feature ravenous monsters, secret agents, thieving ravens, and more.</string>
    <string name="done">Done</string>
    <string name="que1">_______, 0.99, 9.9, 99, 990, 9900</string>
    <string name="que2">2, 3, 5, 7, 11, 13, 17, 19, _______</string>
    <string name="que3">144, 121, 100, _______, 64, 49</string>
    <string name="que4">500, 475, 425, 350, 250, _______</string>
    <string name="que5">1, 3, 6, 10, 15, _______</string>
    <string name="que6">2.5, 3.75, _______, 8.4375, 12.65625</string>
    <string name="que7">987, 878, _______, 660, 551, 442</string>
    <string name="answer">Your answer</string>
</resources>
